--- a/content/w-liquidity.mdx
+++ b/content/w-liquidity.mdx
@@ -1,22 +1,34 @@
 ---
-title: "Crypto 101: Liquidity Pool"
-publishedAt: "2024-09-07"
-summary: "Panduan Komprehensif Liquidity Pool untuk Pemula"
-readTime: "15 mins"
+title: "From Web to Native with React"
+publishedAt: "2024-08-29"
+summary: "Transitioning from web development to React Native allows developers to leverage their existing React skills for building cross-platform mobile apps. Learn why React Native and Expo make this transition seamless."
+readTime: "10 mins"
 featured: true
 icon: "/buildspace.jpg"
 ---
 
-In Javascript/Typescript we can do.
+import { Callout } from 'nextra/components';
 
-```jsx
-console.log("Hello World");
-```
+# From Web to Native with React
 
-In Python we can do. 
+React Native is a powerful choice for web developers looking to create mobile apps. If you’re comfortable with React, transitioning to React Native allows you to leverage your existing skills while building real native apps for both iOS and Android.
 
-```jsx
-print("Hello World");
-```
+## Why Choose React Native?
 
-U guys can read Indonesian Version on my [Medium](https://jasonalhilal.medium.com/)
+- **Transferrable Skills:** Most of your code will still be written in JavaScript (or TypeScript), so you can reuse many coding patterns and libraries.
+- **Native Performance:** Despite writing in JavaScript, React Native maps your code to actual native elements, ensuring strong performance and an authentic app experience.
+- **Cross-Platform Code Sharing:** You can build both iOS and Android apps from a single codebase, and even target web and server using tools like Expo Router.
+
+## Why Use Expo?
+
+Expo is a framework that simplifies React Native development by providing essential tools and services for production-ready apps. It bridges the gap between React Native’s core components and the additional functionality you need, like navigation, notifications, camera access, and more.
+
+With Expo, you don’t need to navigate the overwhelming number of community libraries — it offers a robust standard library and CLI for easy project setup, prototyping, building, and deployment.
+
+<Callout emoji="🚀">
+  **Pro Tip:** Meta officially recommends using Expo, as it provides a stable, well-supported framework to build native apps without the complexity of managing native code.
+</Callout>
+
+With React Native and Expo, you’re well-equipped to take your web development skills into the world of mobile apps. Ready to make the leap?
+
+U guys can read Indonesian Version on my [Medium](https://medium.com/@mindpuzzledev/from-web-to-native-with-react-34d6a16258e7/)
